Sync from private repo v1.1.0-pre-ga
- Complete synchronization using rsync strategy
- Ensures exact match with private repository tag
- Removes files not present in private repo